# lang_learner_backend

./: .env  Cargo.toml  docker-compose.yml
migrations/: 20241111200455_jwt_token.down.sql  20241111200455_jwt_token.up.sql  20241111204149_users.down.sql  20241111204149_users.up.sql
src/: auth.rs  db.rs  main.rs
src/auth/: login.rs  register.rs
src/db/: db.rs  types.rs
