[package]
name = "lang_learner_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version="1.41.1", features = ["full"]}
warp = "0.3.7"
pretty_env_logger = "0.5.0"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"]}
sqlx = { version = "0.8", features = [ "runtime-tokio", "migrate", "postgres"]}
dotenv = "0.15.0"
sha2 = "0.10.8"
base64ct = { version =  "1.6.0", features = ["alloc"]}
jwt = "0.16.0"
chrono = {version = "0.4.38", features = ["serde"]}
hmac = "0.12.1"
